--- a/styles.scss
+++ b/styles.scss
@@ -55,6 +55,9 @@ $color4: black;
         text-align: center;
         text-shadow: 2px 2px 6px #000;
     }
+    .texto-indexcelu{
+        display: none;
+    }
 }
 
 .carousel-inner2 {
@@ -535,6 +538,17 @@ $color4: black;
                 }
             }
         }
+        .containerindex__textoindex{
+        display: none;
+        .texto-indexcelu{
+            color: $color1;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            font-size: 20px;
+            font-weight: bold;
+            text-align: center;
+            text-shadow: 2px 2px 6px #000;
+        }
+    }
     }
 
 
